--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
           delivery app and Multi vendor store">
     <meta name="keyword" content="Bazaar, Bazaar, MARKETING, market">
     <meta name="author" content="abanoub Melad">
-    <link rel="icon" type="image/x-icon" href="./public/images/bazaar-black-sm.c758d695.jpg">
+    <link rel="icon" type="image/x-icon" href="./images/bazaar-black-sm.c758d695.jpg">
     <title>Market</title>
   </head>
   <body>
